@@ -1,5 +1,13 @@
 2005-09-12  Tom Tromey  <tromey@redhat.com>
 
+	* main.cc (argument_parser::help_options): Only print -j help if
+	threads available.
+	(argument_parser::parse_args): Throw better error if threads not
+	available.
+	* thread/thread.hh (concurrence::available): New function.
+
+2005-09-12  Tom Tromey  <tromey@redhat.com>
+
 	* bytecode/attribute.cc (exceptions_attribute): Unwrap the
 	forwarding type.
 	(emit): Likewise.
